# Visualization_Starter

game-engine-math-tutorial/: 00-overview.md  01-vectors-and-matrices.md  02-transforms.md  03-geometry.md  04-advanced-algebra.md
math/: 01-coordinate-systems.md  02-vectors.md  03-matrices.md  04-transformations.md  05-projections.md  06-quaternions.md  07-trigonometry.md  08-interpolation-and-curves.md  09-collision-detection.md  10-physics-math.md  11-lighting-and-shading.md  12-camera-math.md  README.md
opengl_tutorial/: CMakeLists.txt  README.md
opengl_tutorial/docs/01_getting_started/: 01_opengl.md  02_creating_a_window.md  02_opengl_context.md  03_creating_a_window.md  03_hello_window.md  04_hello_triangle.md  04_hello_window.md  05_hello_triangle.md  05_shaders.md  06_shaders.md  06_textures.md  07_textures.md  07_transformations.md  08_coordinate_systems.md  08_transformations.md  09_camera.md  09_coordinate_systems.md  10_camera.md  10_review.md  11_review.md
opengl_tutorial/docs/02_lighting/: 01_colors.md  02_basic_lighting.md  03_materials.md  04_lighting_maps.md  05_light_casters.md  06_multiple_lights.md  07_review.md
opengl_tutorial/docs/03_model_loading/: 01_assimp.md  02_mesh.md  03_model.md
opengl_tutorial/docs/04_advanced_opengl/: 01_depth_testing.md  02_stencil_testing.md  03_blending.md  04_face_culling.md  05_framebuffers.md  06_cubemaps.md  07_advanced_data.md  08_advanced_glsl.md  09_geometry_shader.md  10_instancing.md  11_anti_aliasing.md
opengl_tutorial/docs/05_advanced_lighting/: 01_advanced_lighting.md  02_gamma_correction.md  03_shadow_mapping.md  04_point_shadows.md  05_normal_mapping.md  06_parallax_mapping.md  07_hdr.md  08_bloom.md  09_deferred_shading.md  10_ssao.md
opengl_tutorial/docs/06_pbr/: 01_theory.md  02_lighting.md  03_ibl_diffuse.md  04_ibl_specular.md
opengl_tutorial/docs/07_in_practice/: 01_debugging.md  02_text_rendering.md  03_breakout.md
opengl_tutorial/include/: camera.h  mesh.h  model.h  shader.h
opengl_tutorial/src/01_getting_started/camera/: main.cpp
opengl_tutorial/src/01_getting_started/coordinate_systems/: main.cpp
opengl_tutorial/src/01_getting_started/hello_triangle/: main.cpp
opengl_tutorial/src/01_getting_started/hello_window/: main.cpp
opengl_tutorial/src/01_getting_started/opengl_context/: main.cpp
opengl_tutorial/src/01_getting_started/shaders/: main.cpp
opengl_tutorial/src/01_getting_started/textures/: main.cpp
opengl_tutorial/src/01_getting_started/transformations/: main.cpp
opengl_tutorial/src/02_lighting/basic_lighting/: main.cpp
opengl_tutorial/src/02_lighting/colors/: main.cpp
opengl_tutorial/src/03_model_loading/: main.cpp
shaders/: 01-introduction-and-mindset.md  02-glsl-basics.md  03-vertex-shaders.md  04-fragment-shaders.md  05-tips-and-tricks.md  README.md
shaders/examples/: 01-gradient.frag  02-circle.frag  03-checkerboard.frag  04-wave.frag  05-rainbow.frag  06-sdf-shapes.frag  07-glow.frag
threads/: 01_Introduction_to_Threads.md  02_Creating_and_Managing_Threads.md  03_Thread_Lifecycle.md  04_Sharing_Data_Between_Threads.md  05_Mutexes_and_Locks.md  06_Condition_Variables.md  07_Atomic_Operations.md  08_Futures_Promises_Async.md  09_Thread_Pools.md  10_Deadlocks_and_Common_Problems.md  11_Advanced_Topics.md  12_Best_Practices_and_Patterns.md  README.md
vulkan/: README.md
vulkan/chapters/: 01-introduction.md  02-setup.md  03-instance.md  04-validation-layers.md  05-physical-devices.md  06-logical-device.md  07-surface-swapchain.md  08-image-views.md  09-pipeline-shaders.md  10-renderpasses-framebuffers.md  11-command-buffers.md  12-drawing-sync.md  13-frames-in-flight.md  14-vertex-buffers.md  15-staging-buffers.md  16-index-buffers.md  17-uniforms-descriptors.md  18-textures-samplers.md  19-depth-buffering.md  20-loading-models.md  21-mipmaps-msaa.md  22-push-constants.md  23-compute-shaders.md  24-advanced-renderpasses.md  25-memory-management.md  26-debugging-profiling.md  27-best-practices.md
